Important advancements. Read and Write of external file in Android still not working.
Database: BREAKING refactorings, added tables to manage
  added table PositionsOfReferences to store the coordinates of reference points in clickable images
  renamed InsulinInjection to Injection
Click on images finally fixed: images are visible and clickable, reference points are managed, storage of reference points is normalized, visualization scales with the  image's dimensions.

ClickableImagePage: new unique page that manages all the clickable images pages
Pages: FrontPicturePage, BackPicturePage, HandsPicturePage and SensorsPicturePage are out of solution, to be deleted in the following commit.
Images: done many
  renamed clickable images  and made of the same dimension, now they are front.png, back.png, arms_back.png, hands.png
    hands.png still has to be redrawn, it is only a prototype scetch
  done svg an png of icons (still not used)
    icone done: calculate_insulin, calculator, chart, food, foods, food_to_sugar, gear, glucometer, meal, other, prediction, recipe, syringe
Parametrization of buttons' style.
Some refactorings on UI
Non working start of program's flyout (now commented in AppShell)

--- a/GlucoMan.Maui/AboutPage.xaml
+++ b/GlucoMan.Maui/AboutPage.xaml
@@ -36,7 +36,7 @@ Prototype functions for weighing foods and managing recipes are also included, s
               </FormattedString>
             </Label.FormattedText>
           </Label>
-          <Button x:Name="btnExit" BackgroundColor="#2196F3" TextColor="White" Text="Menù" Clicked="btnExit_Click" />
+          <Button x:Name="btnExit" TextColor="White" Text="Menù" Clicked="btnExit_Click" />
         </VerticalStackLayout>
       </ScrollView>
     </Grid>
