--- a/GlucoMan.Maui/AppShell.xaml
+++ b/GlucoMan.Maui/AppShell.xaml
@@ -5,10 +5,38 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:GlucoMan.Maui"
     Shell.FlyoutBehavior="Flyout"
-    Title="GlucoMan">
+    Title="GlucoMan: Glucose Manager">
 
     <ShellContent
         Title="GlucoMan: Glucose Manager"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    <!--
+    <FlyoutItem Title="Glucose Measurements" Icon="glucometer.png">
+        <ShellContent ContentTemplate="{DataTemplate local:GlucoseMeasurementsPage}" Route="GlucoseMeasurementsPage" />
+    </FlyoutItem>
+    
+    <FlyoutItem Title="Meals" Icon="meals.png">
+        <ShellContent ContentTemplate="{DataTemplate local:MealsPage}" Route="MealsPage" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="New Meal" Icon="meal.png">
+        <ShellContent ContentTemplate="{DataTemplate local:MealPage}" Route="MealPage" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Recipes" Icon="recipe.png">
+        <ShellContent ContentTemplate="{DataTemplate local:RecipesPage}" Route="RecipesPage" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Insulin Calculator" Icon="calculate_insulin.png">
+        <ShellContent ContentTemplate="{DataTemplate local:InsulinCalcPage}" Route="InsulinCalcPage" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Food to Hit Target Carbs" Icon="food_to_sugar.png">
+        <ShellContent ContentTemplate="{DataTemplate local:FoodToHitTargetCarbsPage}" Route="FoodToHitTargetCarbsPage" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Hypo Prediction" Icon="prediction.png">
+        <ShellContent ContentTemplate="{DataTemplate local:HypoPredictionPage}" Route="HypoPredictionPage" />
+    </FlyoutItem>-->
 </Shell>
