--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -28,21 +28,28 @@
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
             <!-- check box with associated label into a StackLayout -->
-            <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="LightGreen"
+            <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4"
+                   x:Name="txtNotes" BackgroundColor="LightGreen"
                    HorizontalTextAlignment="Start" IsReadOnly="false"
                    ToolTipProperties.Text="Note about the measurement" />
 
             <Button Grid.Row="3" Grid.Column="0" Text="Now" x:Name="btnNow" Margin="1"
                     ToolTipProperties.Text="Sets the date and time at the current instant" 
                     Clicked="btnNow_Click"/>
-            <Button Grid.Row="3" Grid.Column="1" Text="+" x:Name="btnAddMeasurement" Margin="1"
-                    ToolTipProperties.Text="Adds a new measurement with the data taken from UI" 
-                    Clicked="btnAddMeasurement_Click"/>
-            <Button Grid.Row="3" Grid.Column="2" Text="-" x:Name="btnRemoveMeasurement" Margin="1"
-                    ToolTipProperties.Text="Deletes the selected measurement" Clicked="btnRemoveMeasurement_Click"/>
+            <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,*">
+                <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddMeasurement" Margin="1"
+                        ToolTipProperties.Text="Adds a new measurement with the data taken from UI" 
+                        Clicked="btnAddMeasurement_Click"/>
+                <Button Grid.Row="0" Grid.Column="1"
+                        Text="-" x:Name="btnRemoveMeasurement" Margin="1"
+                    ToolTipProperties.Text="Deletes the selected measurement" 
+                    Clicked="btnRemoveMeasurement_Click"/>
+            </Grid>
+            <Button Grid.Row="3" Grid.Column="2" Text="Clear Data" Margin="1"
+                    ToolTipProperties.Text="Deletes the selected measurement" 
+                    Clicked="btnClearData_Click"/>
             <Button Grid.Row="3" Grid.Column="3" Text="Save" x:Name="btnSave" Margin="1"
                     ToolTipProperties.Text="Saves the modifications made on current measurement" Clicked="btnSave_ClickAsync"/>
-
             <HorizontalStackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
                 <CheckBox VerticalOptions="Center" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
