--- a/GlucoMan.Maui/MiscellaneousFunctionsPage.xaml
+++ b/GlucoMan.Maui/MiscellaneousFunctionsPage.xaml
@@ -37,7 +37,7 @@
                     ToolTipProperties.Text="Imports foods from import.sqlite file"
                     Text="Import foods" WidthRequest="150"
                     x:Name="btnImport" Clicked="btnImport_Click"
-                    IsEnabled="False"/>
+                    IsEnabled="False" BackgroundColor="Grey" TextColor="White"/>
             <Button Grid.Row="7" Grid.Column="1" 
                     Text="Read database" WidthRequest="150"
                     ToolTipProperties.Text="Substitutes the current database file with file 'readGlucoManData.sqlite', that finds in folder"
@@ -53,7 +53,7 @@
                     x:Name="btnShowErrorLog" Clicked="btnShowErrorLog_ClickAsync" />
             <Button Grid.Row="9" Grid.Column="1"
                     Text="Delete error log" WidthRequest="150"
-                    ToolTipProperties.Text="Deletes the content of the logo file"
+                    ToolTipProperties.Text="Deletes the content of the log file"
                     x:Name="btnDeleteErrorLog" Clicked="btnDeleteErrorLog_ClickAsync" />
             <Button Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" 
                     Text="Menù" WidthRequest="150"
