--- a/GlucoMan.Maui/WeighFoodPage.xaml
+++ b/GlucoMan.Maui/WeighFoodPage.xaml
@@ -34,7 +34,15 @@
                     Text="XXXX"></Button>
             <Button Grid.Row="1" Grid.Column="1" 
                     Text="XXXX"></Button>
-
+            <Image Grid.Row="1" Grid.Column="2" x:Name="txtIngredientChoGrams"
+                           Grid.RowSpan="1"
+                           Source="calculator.png"
+                            HorizontalOptions="Center"
+                            VerticalOptions="Center">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="Calculator_Click" />
+                </Image.GestureRecognizers>
+            </Image>
             <Label Grid.Row="2" Grid.ColumnSpan="5" Text="Data before cooking (for ALL the  portions)" 
                     HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="3" Grid.ColumnSpan="5" Text="Raw main food (all portions)" 
